# counterpoint

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  create-release.yml  license-compliance.yml  tag-and-release.yml
docs/: compliance.md
scripts/: test-downstream.sh
src/counterpoint/: __init__.py  chat.py  chat_workflow.py  context.py  exceptions.py  generator.py  pipeline.py  rate_limiter.py  tools.py  workflow.py
src/counterpoint/errors/: __init__.py  serializable.py  workflow_errors.py
src/counterpoint/generators/: __init__.py  base.py  litellm_generator.py  mixins.py
src/counterpoint/templates/: __init__.py  environment.py  message.py  message_parser.py  prompts_manager.py  template.py
src/counterpoint/tools/: __init__.py  _docstring_parser.py  tool.py
tests/: conftest.py  rate_limiter.py  test_chat.py  test_chat_workflow.py  test_generator.py  test_generator_retry.py  test_pipeline.py  test_rate_limiter.py  test_retry_mechanism.py  test_template_namespaces.py  test_templates.py  test_tools.py  test_tools_context.py  test_workflow.py  test_workflow_error_handling.py  test_workflow_output_parsing.py
