[project]
name = "counterpoint"
version = "0.1.0"
description = " A lightweight library that orchestrates LLM completions and agents in parallel workflows "
readme = "README.md"
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.72.2",
    "pydantic>=2.11.5",
    "pytest-asyncio>=1.0.0",
    "griffe>=0.27.0",
    "typing-extensions>=4.9.0",
    "jinja2>=3.0.0",
    "logfire-api>=3.22.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip-audit>=2.9.0",
    "pylint-pydantic>=0.3.5",
    "pytest>=8.4.0",
]

# Tools should be installed via `uv tool install`:
# - ruff: uv tool install ruff  
# - vermin: uv tool install vermin
# - pre-commit: uv tool install pre-commit --with pre-commit-uv
# 
# Note: pytest and pip-audit stay in dev deps because they need access to project dependencies


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
