[project]
name = "counterpoint"
version = "0.1.2"
description = " A lightweight library that orchestrates LLM completions and agents in parallel workflows "
readme = "README.md"
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.10"
dependencies = [
    "litellm~=1.72.4",
    "pydantic~=2.11.5",
    "pytest-asyncio~=1.0.0",
    "griffe~=1.7.3",
    "typing-extensions~=4.14.0",
    "jinja2~=3.1.6",
    "logfire-api~=3.22.0",
    "tenacity~=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ipykernel~=6.29.5",
    "pip-audit~=2.9.0",
    "pylint-pydantic~=0.3.5",
    "pytest~=8.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
